# TBRC-Studio

./: CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml
.github/workflows/: build-test.yml  ci.yml  windows-installer.yml
.planning/phases/02-engine-isolation-subprocessbackend-indextts-wav-export-dubbi/: 02-01-SUMMARY.md
.planning/phases/03-supertonic-3-engine-installer-mirror-reliability/: 03-01-SUMMARY.md
backend/: main.py
backend/api/: dependencies.py
backend/api/routers/: audiobook.py  batch.py  capture_ws.py  dub_core.py  dub_export.py  dub_generate.py  generation.py  profiles.py  settings.py
backend/api/routers/setup/: download.py
backend/core/: changelog.py  db.py  db_backup.py  error_journal.py  failure.py  user_env.py
backend/engines/: __init__.py
backend/engines/_echo/: __init__.py  main.py
backend/engines/supertonic3/: __init__.py  backend.py  constants.py  sidecar.py
backend/migrations/versions/: 0007_rebuild_poisoned_design_instruct.py
backend/services/: asr_backend.py  dub_pipeline.py  ffmpeg_utils.py  llm_backend.py  longform_import.py  model_manager.py  segmentation.py  settings_store.py  speaker_clone.py  speech_rate.py  subprocess_backend.py  translator.py  tts_backend.py
backend/tests/: test_asr_transcribe_timeout.py  test_batch.py
deploy/: Dockerfile  docker-compose.yml
docs/: update-channels.md
docs/install/: docker.md
docs/specs/: voice-studio-unification.md
frontend/: package.json
frontend/src/: App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: bootstrap.rs  commands.rs  config.rs  lib.rs  updater_channel.rs
frontend/src/api/: audiobook.ts  batch.ts
frontend/src/components/: BatchAddDialog.jsx  BatchTemplateManager.jsx  CaptureWidget.css  CaptureWidget.jsx  ChangelogViewer.jsx  ChangelogViewer.test.jsx  CompareModal.css  CompareModal.jsx  DictationDemo.jsx  DubbingDemo.jsx  EngineCompatibilityMatrix.jsx  GlossaryPanel.jsx  Header.jsx  HfTokenCard.jsx  KeyboardCheatsheet.jsx  LogsFooter.jsx  MarkdownLite.jsx  Misc.css  NavRail.jsx  NotificationPanel.jsx  StoriesEditor.jsx  SupertonicLicenseDialog.css  SupertonicLicenseDialog.jsx  UpdatesPanel.jsx  UpdatesPanel.test.jsx
frontend/src/components/dub/: DubFailureNotice.jsx  DubFooter.jsx  DubHeader.jsx  DubLeftColumn.jsx  DubPipelineStepper.jsx  DubRightColumn.jsx  FooterBtn.jsx  IdleSkeleton.jsx  PrepOverlay.jsx  TranscribeOverlay.jsx  dub.css
frontend/src/components/gallery/: ImportsZone.jsx
frontend/src/components/profile/: ProfileActivity.jsx  ProfileDetails.jsx  ProfileHeader.jsx
frontend/src/components/settings/: ApiKeysPanel.jsx  CredentialsTab.jsx  GeneralTab.jsx  LLMEndpointPanel.jsx  ModelStoreTab.jsx
frontend/src/hooks/: useDubWorkflow.js  useProfiles.js
frontend/src/i18n/locales/: en.json  zh-CN.json
frontend/src/pages/: AudiobookTab.jsx  BatchQueue.jsx  CloneDesignTab.jsx  DubTab.jsx  Launchpad.jsx  Projects.jsx  Settings.jsx  VoiceProfile.jsx
frontend/src/store/: index.ts  prefsSlice.ts  uiSlice.ts
frontend/src/test/: DictationDemo.test.jsx  ProjectsAudiobookPlayback.test.jsx  appShellScale.test.js  featureCoverage.test.js
frontend/src/utils/: appVersion.js  appVersion.test.js  download.js  importStory.js  importStory.test.js  markdownLite.js  markdownLite.test.js  media.js  parseScript.js  parseScript.test.js  updatesApi.js
omnivoice/cli/: dub.py
omnivoice/utils/: voice_design.py
scripts/: desktop-prod.sh  dev-desktop.cmd  dev-desktop.ps1  dump_api_routes.py  resolve_supertonic3_sha.py
tests/: conftest.py  test_api_route_inventory.py  test_autofit_838.py  test_changelog_parse.py  test_db_backup.py  test_db_migration_safety.py  test_dub_dialect.py  test_dub_subtitles_309.py  test_generate_engine.py  test_generation_history_self_heal.py  test_hf_mirror_error_class.py  test_llm_endpoint_settings.py  test_llm_skills.py  test_longform_import.py  test_loopback_server_mode.py  test_migration_0007_instruct_rebuild.py  test_no_hardcoded_cjk.py  test_pitch_stretch_async.py  test_profile_design_save_decouple.py  test_profile_unification.py  test_segmentation.py  test_settings_updates_api.py  test_speaker_clone_purity.py  test_speaker_hint.py  test_supertonic3.py  test_translator.py  test_user_env_authoritative.py  test_voice_design_instruct_heal.py  test_window_launch_state.py
tests/backend/services/: test_ffmpeg_utils.py  test_mlx_import_guard.py  test_subprocess_backend.py  test_tts_backend_registry.py
tests/fixtures/: api_routes.txt
tests/probe/: README.md  _boot_runner.py  conftest.py  desktop.py  env.py  spec.py  test_probe_asr_e2e.py  test_probe_coverage.py  test_probe_design.py  test_probe_dictation.py  test_probe_dubbing.py  test_probe_engines.py  test_probe_i18n.py  test_probe_migration.py  test_probe_security.py
tests/probe/judges/: coverage.py  dictation.py  dubbing.py  engine.py  i18n.py
tests/probe/specs/: coverage_critic.probe.yaml  dictation.probe.yaml  dub_export.probe.yaml  engines.probe.yaml  i18n_parity.probe.yaml  migration.probe.yaml  security.probe.yaml  voice_design.probe.yaml
